2015-07-17  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (open_buffer): Verify that a named and existing file
	is a normal file, to avoid opening an empty buffer when the name of
	a directory is specified.  This fixes Savannah bug #45383 reported
	by Mike Frysinger, and also Savannah bug #27839 (which is an echo
	from Debian bug #551717 reported by Paul Wise).
	* src/files.c (load_history): Remove an earlier attempt to make M-W
	work at startup.  It no longer worked because the assigned value gets
	overwritten by a later initialization of 'last_search' to the empty
	string.  Found through the use of valgrind.
	* src/text.c (do_alt_speller): Avoid an unfounded warning about a
	possibly uninitialized variable.

2015-07-17  Mike Frysinger  <vapier@gentoo.org>
	* src/browser.c (browser_refresh): Use the proper type (off_t) for
	the size of a file, and avoid warnings about too large bit shifts.

2015-07-15  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c, src/rcfile.c, doc/nanorc.sample.in, doc/man/nano.1,
	doc/man/nanorc.5, doc/texinfo/nano.texi, doc/syntax/nanorc.nanorc:
	Unabbreviate the long option --const to --constantshow, and --poslog
	to --positionlog, to be more understandable.
	* src/nano.h, src/global.c (add_to_sclist), src/help.c (help_init),
	src/rcfile.c (parse_binding), src/winio.c (get_shortcut): Rename
	the 'menu' item in the sc (shortcut) struct to 'menus', as it can
	refer to more than one menu.

2015-07-13  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_int_spell_fix, do_alt_speller): Remove an unneeded
	condition; 'added_magicline' can only be true when NO_NEWLINES isn't.
	* src/files.c (replace_buffer): Prevent a segfault when spellchecking
	a marked region and nonewlines isn't set.

2015-07-12  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_alt_speller): Rename the variable 'totsize_save'
	to 'size_of_surrounding', to better describe what it contains.