@@ -1,3 +1,8 @@
+2015-07-18  Benno Schulenberg  <bensberg@justemail.net>
+	* src/winio.c (edit_draw): When looking for multiline-regex matches,
+	look for a new start only after an end, instead of right after the
+	last start.  This fixes bug #45525 and bug #41313 on Savannah.
+
 2015-07-17  Benno Schulenberg  <bensberg@justemail.net>
 	* src/files.c (open_buffer): Verify that a named and existing file
 	is a normal file, to avoid opening an empty buffer when the name of
